<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/heart"
            android:title="@string/menu_favorites" />

        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_preferences" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/information_outline"
            android:title="@string/menu_help" />
    </group>

</menu>
