<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="be.newz.newsy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="be.newz.newsy.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

<!--    <fragment-->
<!--        android:id="@+id/nav_preferences"-->
<!--        android:name="be.newz.newsy.ui.preferences.PreferencesFragment"-->
<!--        android:label="@string/menu_preferences"-->
<!--        tools:layout="@layout/fragment_preferences" />-->

    <fragment
        android:id="@+id/nav_favorites"
        android:name="be.newz.newsy.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_help"
        android:name="be.newz.newsy.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

</navigation>